force-app/main/default/objects/Account/fields/AccountSyncMinerva__c.field-meta.xml
<CustomField>
    <fullName>AccountSyncMinerva__c</fullName>
    <description>Estado de la sincronización con los servicios web de Minerva. Los valores que pueden venir en el campos son OK y ERROR</description>
    <label>Cuenta sincronizada Minerva</label>
    <length>10</length>
    <type>Text</type>
</CustomField>