force-app/main/default/objects/Account/fields/AccountSyncProd__c.field-meta.xml
<CustomField>
    <fullName>AccountSyncProd__c</fullName>
    <description>Estado de la sincronización con los servicios web de Producción. Los valores que pueden venir en el campos son OK y ERROR</description>
    <label>Cuenta sincronizada Producción</label>
    <length>10</length>
    <type>Text</type>
</CustomField>