force-app/main/default/objects/Account/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valor que indica si una oficina está disponible para solicitar citar en ella.</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>