force-app/main/default/objects/Account/fields/AutoNumCliMinerva__c.field-meta.xml
<CustomField>
    <fullName>AutoNumCliMinerva__c</fullName>
    <description>Campo autonumérico que servira para rellenar el campo de IdClienteMinerva__c con un id si este campo no esta relleno.
Inicio en 530003000</description>
    <displayFormat>{000000000}</displayFormat>
    <label>Auto numérico Cliente Minerva</label>
    <type>AutoNumber</type>
</CustomField>