force-app/main/default/objects/Account/fields/Canal_Fuente_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Canal_Fuente_Cliente__c</fullName>
    <description>Canal por el que el Cliente ha conocido a Arraiga</description>
    <label>¿Cómo nos ha conocido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CanalOrigenCliente</valueSetName>
    </valueSet>
</CustomField>