force-app/main/default/objects/Account/fields/conservacion_seguimientoBBD__c.field-meta.xml
<CustomField>
    <fullName>conservacion_seguimientoBBD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acepta conservación y seguimiento de BBDD para Revisiones</description>
    <label>Acepta conservación y seguimiento de BBD</label>
    <type>Checkbox</type>
</CustomField>