force-app/main/default/objects/Account/fields/CorreoElectronicoAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoAuxiliar__c</fullName>
    <description>Sirve para mandar la comunicación de cración para cuentas personales</description>
    <label>Correo Electrónico Auxiliar</label>
    <type>Email</type>
</CustomField>