force-app/main/default/objects/Account/fields/EnlaceSiteGDPREnviado__c.field-meta.xml
<CustomField>
    <fullName>EnlaceSiteGDPREnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca si se le ha enviado la primera comunicación (Solo importa en cuentas personales)</description>
    <label>Enlace Site GDPR Enviado</label>
    <type>Checkbox</type>
</CustomField>