force-app/main/default/objects/Account/fields/EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>EstadoCivil__c</fullName>
    <description>Estado civil del cliente</description>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soltero</fullName>
            </value>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Separado</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Viudo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>