force-app/main/default/objects/Account/fields/EstadoCuenta__c.field-meta.xml
<CustomField>
    <fullName>EstadoCuenta__c</fullName>
    <description>Estado de la cuenta. Sera cliente potencial cuando aun no tenga ningún expediente creado.</description>
    <label>Estado de la Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente potencial</fullName>
                <default>true</default>
                <label>Cliente potencial</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Recaptura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>