force-app/main/default/objects/Account/fields/FechaConstitucion__c.field-meta.xml
<CustomField>
    <fullName>FechaConstitucion__c</fullName>
    <description>Fecha de constitución de la empresa</description>
    <inlineHelpText>Fecha de constitución de la empresa</inlineHelpText>
    <label>Fecha de constitución</label>
    <type>Date</type>
</CustomField>