force-app/main/default/objects/Account/fields/FechaSyncMinerva__c.field-meta.xml
<CustomField>
    <fullName>FechaSyncMinerva__c</fullName>
    <description>Fecha de la última sincronización con el WS de Minerva</description>
    <label>Fecha sincronización con Minerva</label>
    <type>DateTime</type>
</CustomField>