force-app/main/default/objects/Account/fields/FechaSyncProd__c.field-meta.xml
<CustomField>
    <fullName>FechaSyncProd__c</fullName>
    <description>Fecha de la última sincronización con el WS de Producción</description>
    <label>Fecha sincronización con Producción</label>
    <type>DateTime</type>
</CustomField>