force-app/main/default/objects/Account/fields/FinAperturaLaborable__c.field-meta.xml
<CustomField>
    <fullName>FinAperturaLaborable__c</fullName>
    <description>Indica la hora de cierre de la oficina de lunes a viernes</description>
    <label>Fin apertura (laborable)</label>
    <type>Time</type>
</CustomField>