force-app/main/default/objects/Account/fields/FinAperturaLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>FinAperturaLaborableTarde__c</fullName>
    <label>Fin apertura tarde (laborable)</label>
    <type>Time</type>
</CustomField>