force-app/main/default/objects/Account/fields/FinAperturaNoLaborable__c.field-meta.xml
<CustomField>
    <fullName>FinAperturaNoLaborable__c</fullName>
    <description>Indica el horario de cierre en fines de semana y festivos</description>
    <label>Fin apertura (no laborable)</label>
    <type>Time</type>
</CustomField>