force-app/main/default/objects/Account/fields/FinAperturaNoLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>FinAperturaNoLaborableTarde__c</fullName>
    <label>Fin apertura tarde (no laborable)</label>
    <type>Time</type>
</CustomField>