force-app/main/default/objects/Account/fields/FinAtenComLaborable__c.field-meta.xml
<CustomField>
    <fullName>FinAtenComLaborable__c</fullName>
    <description>Indica la hora de cierre de atención comercial de lunes a viernes</description>
    <label>Fin atención comercial (laborable)</label>
    <type>Time</type>
</CustomField>