force-app/main/default/objects/Account/fields/FinAtenComLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>FinAtenComLaborableTarde__c</fullName>
    <label>Fin aten. com. tarde (laborable)</label>
    <type>Time</type>
</CustomField>