force-app/main/default/objects/Account/fields/FinAtenComNoLaborable__c.field-meta.xml
<CustomField>
    <fullName>FinAtenComNoLaborable__c</fullName>
    <description>Indica el horario de cierre de atención comercial de fines semana y festivos</description>
    <label>Fin atención comercial (no laborable)</label>
    <type>Time</type>
</CustomField>