force-app/main/default/objects/Account/fields/FinAtenComNoLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>FinAtenComNoLaborableTarde__c</fullName>
    <label>Fin aten. com. tarde (no laborable)</label>
    <type>Time</type>
</CustomField>