force-app/main/default/objects/Account/fields/Id_Cliente_Web__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente_Web__c</fullName>
    <description>Identificador de Cliente en los formularios Web, enviado por el formulario para realizar control posterior y análisis</description>
    <label>Id Cliente Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>