force-app/main/default/objects/Account/fields/IdClienteMinerva__c.field-meta.xml
<CustomField>
    <fullName>IdClienteMinerva__c</fullName>
    <description>Id que pasaremos a la hora de crear el cliente.</description>
    <externalId>true</externalId>
    <label>Id Cliente Minerva</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>