force-app/main/default/objects/Account/fields/IdContacto__c.field-meta.xml
<CustomField>
    <fullName>IdContacto__c</fullName>
    <description>Id del contacto asociado a la cuenta personal</description>
    <formula>PersonContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdContacto</label>
    <type>Text</type>
</CustomField>