force-app/main/default/objects/Account/fields/IdExternoOficina__c.field-meta.xml
<CustomField>
    <fullName>IdExternoOficina__c</fullName>
    <description>Id externo utilizado para las cargas de oficinas</description>
    <externalId>true</externalId>
    <label>Id Externo Oficina</label>
    <length>50</length>
    <type>Text</type>
</CustomField>