force-app/main/default/objects/Account/fields/IdExternoOficinaLink__c.field-meta.xml
<CustomField>
    <fullName>IdExternoOficinaLink__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo Oficina por Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>