force-app/main/default/objects/Account/fields/IdOrigen__c.field-meta.xml
<CustomField>
    <fullName>IdOrigen__c</fullName>
    <description>Contiene el identificador del sistema de origen de Arriaga Asociados, utilizado para las cargas iniciales</description>
    <externalId>true</externalId>
    <label>Id Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>