force-app/main/default/objects/Account/fields/IdOrigenProd__c.field-meta.xml
<CustomField>
    <fullName>IdOrigenProd__c</fullName>
    <description>Id Cliente comunicado con producción</description>
    <label>Id Cliente Producción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>