force-app/main/default/objects/Account/fields/InicioAperturaLaborable__c.field-meta.xml
<CustomField>
    <fullName>InicioAperturaLaborable__c</fullName>
    <description>Indica el horario de apertura de lunes a viernes</description>
    <label>Inicio apertura (laborable)</label>
    <type>Time</type>
</CustomField>