force-app/main/default/objects/Account/fields/InicioAperturaLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>InicioAperturaLaborableTarde__c</fullName>
    <description>Indica el horario de apertura de lunes a viernes (tarde)</description>
    <label>Inicio apertura tarde (laborable)</label>
    <type>Time</type>
</CustomField>