force-app/main/default/objects/Account/fields/InicioAperturaNoLaborable__c.field-meta.xml
<CustomField>
    <fullName>InicioAperturaNoLaborable__c</fullName>
    <description>Indica el horario de apertura en fines de semana y festivos</description>
    <label>Inicio apertura (no laborable)</label>
    <type>Time</type>
</CustomField>