force-app/main/default/objects/Account/fields/InicioAperturaNoLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>InicioAperturaNoLaborableTarde__c</fullName>
    <description>Indica el horario de apertura en fines de semana y festivos (tarde)</description>
    <label>Inicio apertura tarde (no laborable)</label>
    <type>Time</type>
</CustomField>