force-app/main/default/objects/Account/fields/InicioAtenComLaborable__c.field-meta.xml
<CustomField>
    <fullName>InicioAtenComLaborable__c</fullName>
    <description>Indica el horario de atención comercial de lunes a viernes</description>
    <label>Inicio atención comercial (laborable)</label>
    <type>Time</type>
</CustomField>