force-app/main/default/objects/Account/fields/InicioAtenComLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>InicioAtenComLaborableTarde__c</fullName>
    <description>Indica el horario de atención comercial de lunes a viernes (tarde)</description>
    <label>Inicio aten. comercial tarde (laborable)</label>
    <type>Time</type>
</CustomField>