force-app/main/default/objects/Account/fields/InicioAtenComNoLaborable__c.field-meta.xml
<CustomField>
    <fullName>InicioAtenComNoLaborable__c</fullName>
    <description>Indica el horario de atención comercial en fines de semana y festivos (inicio)</description>
    <label>Inicio atención comercial (no laborable)</label>
    <type>Time</type>
</CustomField>