force-app/main/default/objects/Account/fields/InicioAtenComNoLaborableTarde__c.field-meta.xml
<CustomField>
    <fullName>InicioAtenComNoLaborableTarde__c</fullName>
    <description>Indica el horario de atención comercial en fines de semana y festivos (inicio) (tarde)</description>
    <label>Inicio aten. com. tarde (no laborable)</label>
    <type>Time</type>
</CustomField>