force-app/main/default/objects/Account/fields/MenorEdad__c.field-meta.xml
<CustomField>
    <fullName>MenorEdad__c</fullName>
    <description>Muestra icono si el cliente es menor de edad</description>
    <formula>IF( 
 AND(Edad__c &lt;18, NOT(ISBLANK( PersonBirthdate ))), &quot;Menor de edad &quot; + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Alerta&quot;), &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observaciones</label>
    <type>Text</type>
</CustomField>