force-app/main/default/objects/Account/fields/MessageErrMinerva__c.field-meta.xml
<CustomField>
    <fullName>MessageErrMinerva__c</fullName>
    <description>Mensaje del estado de la sincronización con los servicios web de Minerva. Aparecerá relleno si el estado es ERROR e indicará el error</description>
    <label>Mensaje Error Minerva</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>