force-app/main/default/objects/Account/fields/MessageErrProd__c.field-meta.xml
<CustomField>
    <fullName>MessageErrProd__c</fullName>
    <description>Mensaje del estado de la sincronización con los servicios web de Producción. Aparecerá relleno si el estado es ERROR e indicará el error</description>
    <label>Mensaje Error Producción</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>