force-app/main/default/objects/Account/fields/NCuentaCorriente__c.field-meta.xml
<CustomField>
    <fullName>NCuentaCorriente__c</fullName>
    <description>Número de cuenta corriente del cliente formato IBAN</description>
    <label>Nº de cuenta corriente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>