force-app/main/default/objects/Account/fields/NombreCorto__c.field-meta.xml
<CustomField>
    <fullName>NombreCorto__c</fullName>
    <description>Nombre abreviado de las oficinas de Arriaga, para informes. Creado en el momento de la carga de datos</description>
    <label>Nombre corto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>