force-app/main/default/objects/Account/fields/OM_Priority__c.field-meta.xml
<CustomField>
    <fullName>OM_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>