force-app/main/default/objects/Account/fields/OM_VIP__c.field-meta.xml
<CustomField>
    <fullName>OM_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si un cliente es prioritario</description>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>