force-app/main/default/objects/Account/fields/PoderNotarial__c.field-meta.xml
<CustomField>
    <fullName>PoderNotarial__c</fullName>
    <description>Indica el poder notarial</description>
    <label>Poder notarial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
                <default>true</default>
                <label>Ninguno</label>
            </value>
            <value>
                <fullName>Con facultad de cobro</fullName>
            </value>
            <value>
                <fullName>Sin facultad de cobro</fullName>
            </value>
            <value>
                <fullName>Revocado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>