force-app/main/default/objects/Account/fields/ProvinciaEnvio__c.field-meta.xml
<CustomField>
    <fullName>ProvinciaEnvio__c</fullName>
    <description>Para utilizar en la creación de custom calendar settings en el mapeo de metadatos</description>
    <formula>ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia de Envío</label>
    <type>Text</type>
</CustomField>