force-app/main/default/objects/Account/fields/RegimenEconomico__c.field-meta.xml
<CustomField>
    <fullName>RegimenEconomico__c</fullName>
    <description>Indica el estado del régimen económico del cliente</description>
    <label>Régimen económico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
                <default>true</default>
                <label>Ninguno</label>
            </value>
            <value>
                <fullName>Bienes Gananciales</fullName>
            </value>
            <value>
                <fullName>Separación de Bienes</fullName>
            </value>
            <value>
                <fullName>Régimen de Participación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>