force-app/main/default/objects/Account/fields/Responsable_de_Zona__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_Zona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsable de la zona a la que pertenece la oficina.
Utilizado principalmente para el cálculo de incentivos.</description>
    <inlineHelpText>Responsable de la zona a la que pertenece la oficina</inlineHelpText>
    <label>Responsable de Zona</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>