force-app/main/default/objects/Account/fields/Satisfaccion_Cliente_Motivo__c.field-meta.xml
<CustomField>
    <fullName>Satisfaccion_Cliente_Motivo__c</fullName>
    <description>Encuesta Satisfacción del Cliente, con Motivo</description>
    <label>Satisfacción Cliente Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Satisfaccion_Cliente_Resultado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLAZOS GESTIÓN INTERNA</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN DURANTE PROCESO</fullName>
            </value>
            <value>
                <fullName>FACTURACIÓN</fullName>
            </value>
            <value>
                <fullName>EXPECTATIVAS</fullName>
            </value>
            <value>
                <fullName>PENDIENTE DE REVISIÓN</fullName>
            </value>
            <value>
                <fullName>SIN ESPECIFICAR</fullName>
                <isActive>false</isActive>
                <label>SIN ESPECIFICAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>