force-app/main/default/objects/Account/fields/Satisfaccion_Cliente_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Satisfaccion_Cliente_Resultado__c</fullName>
    <description>Encuesta por ATC Satisfacción del Cliente,  Resultado general</description>
    <label>Satisfacción Cliente Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRESCRIPTOR</fullName>
            </value>
            <value>
                <fullName>SATISFECHO</fullName>
            </value>
            <value>
                <fullName>CONFORME</fullName>
            </value>
            <value>
                <fullName>INSATISFECHO</fullName>
            </value>
            <value>
                <fullName>DETRACTOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>