force-app/main/default/objects/Account/fields/ScoringNumber__c.field-meta.xml
<CustomField>
    <fullName>ScoringNumber__c</fullName>
    <description>Cálculo del scoring del cliente</description>
    <formula>IF(ISBLANK(FirstName),0,0.5)+ 
CASE( EstadoCuenta__c,
&quot;Cliente potencial&quot;, 0.5,
&quot;Cliente&quot;, 1,
&quot;Recaptura&quot;, 0.5, 0)+ 
IF(ISBLANK( DocumentoIdentidad__c ), 0, 1)+ 
CASE(Sexo__pc, &quot;&quot;, 0, 0.5)+
IF(ISBLANK( PersonTitle ), 0, 1)+
CASE(EstadoCivil__c, &quot;&quot;, 0, 1)+
CASE(RegimenEconomico__c, &quot;&quot;, 0, 0.5)+
IF(ISBLANK( PersonBirthdate ), 0, 1)+
CASE(PoderNotarial__c, &quot;&quot;, 0, 2)+
IF(ISBLANK(IBAN__pc ), 0, 3)+
IF(ISBLANK(Phone ), 0, 1.5)+
IF(ISBLANK(PersonMobilePhone ), 0, 0.5)+
IF(ISBLANK(PersonEmail ), 0, 1.5)+
IF(ISBLANK(CorreoElectronicoSecundario__c ), 0, 0.5) +
IF(ISBLANK(ShippingStreet ), 0, 1) +
IF(ISBLANK(ShippingPostalCode ), 0, 1) +
IF(ISBLANK(ShippingCity ), 0, 0.5) +
IF(ISBLANK(ShippingState ), 0, 0.5) +
IF(ISBLANK(ShippingCountry ), 0, 0.5) +
IF(AceptoPoliticaPrivacidad__pc, 1, 0) +
IF(DeseoRecibirComunicacionesComerciales__pc,2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScoringNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>