force-app/main/default/objects/Account/fields/TipoOficina__c.field-meta.xml
<CustomField>
    <fullName>TipoOficina__c</fullName>
    <description>En el caso de que la cuenta sea una oficia de Arriaga indica su tipología</description>
    <label>Tipo de Oficina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
                <label>Centro comercial</label>
            </value>
            <value>
                <fullName>OP</fullName>
                <label>Oficina planta</label>
            </value>
            <value>
                <fullName>OPC</fullName>
                <label>Oficina planta calle</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Hotel</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>Centro de Negocios</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>