force-app/main/default/objects/Account/fields/TitularidadReal__c.field-meta.xml
<CustomField>
    <fullName>TitularidadReal__c</fullName>
    <description>Titularidad real de la empresa</description>
    <inlineHelpText>Titularidad real de la empresa</inlineHelpText>
    <label>Titularidad real</label>
    <length>255</length>
    <type>Text</type>
</CustomField>