force-app/main/default/objects/Account/fields/UsuarioPortal_Activo__c.field-meta.xml
<CustomField>
    <fullName>UsuarioPortal_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado si el Usuario de Comunidad debe activarse</description>
    <label>UsuarioPortal Activo</label>
    <type>Checkbox</type>
</CustomField>