force-app/main/default/objects/Account/fields/UsuarioPortal_Activo_Ult_Modif__c.field-meta.xml
<CustomField>
    <fullName>UsuarioPortal_Activo_Ult_Modif__c</fullName>
    <description>Fecha de Marcado si el Usuario de Comunidad debe activarse</description>
    <label>UsuarioPortal Activo Ult. Modif.</label>
    <type>Date</type>
</CustomField>