force-app/main/default/objects/Account/recordTypes/Oficina.recordType-meta.xml
<RecordType>
    <fullName>Oficina</fullName>
    <active>true</active>
    <label>Oficina</label>
</RecordType>