force-app/main/default/objects/Account/recordTypes/PersonaJuridica.recordType-meta.xml
<RecordType>
    <fullName>PersonaJuridica</fullName>
    <active>true</active>
    <description>Tipo de registro para cuentas empresariales</description>
    <label>Persona Jurídica</label>
</RecordType>