force-app/main/default/objects/Account/recordTypes/Tercero.recordType-meta.xml
<RecordType>
    <fullName>Tercero</fullName>
    <active>true</active>
    <description>Entidades como bancos, ayuntamientos, empresas de seguros, marcas automovilísticas, concesionarios, etc..</description>
    <label>Tercero</label>
</RecordType>