force-app/main/default/objects/Account/validationRules/BloquearEmpresasiseIndicaNIF.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEmpresasiseIndicaNIF</fullName>
    <active>true</active>
    <description>Bloquear Empresa si se Indica NIF, si se crea una cuenta de tipo empresa, se debe de indicar siempre CIF y no un NIF</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName &lt;&gt; &apos;Oculto&apos;,
$Profile.Id &lt;&gt; $Label.PerfilComunidad,
       RecordType.DeveloperName &lt;&gt; &apos;PersonAccount&apos;,
    OR(
       ISPICKVAL(TipoDocumento__c,&quot;NIF&quot;), 
       ISPICKVAL(TipoDocumento__c,&quot;NIE&quot;),
       ISPICKVAL(TipoDocumento__c,&quot;Pasaporte&quot;)
)
)</errorConditionFormula>
    <errorMessage>Si usted está creando una empresa o persona Jurídica, debe indicar un CIF, si se trata de una persona debe cancelar y crear una cuenta personal.</errorMessage>
</ValidationRule>